--- a/css/style.css
+++ b/css/style.css
@@ -346,7 +346,7 @@ h6,
 
 .tag-button {
     padding: 8px 16px;
-    background-color: #634329;
+    background-color: black;
     color: white;
     border: none;
     border-radius: 20px;
